// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandableSection should render 1`] = `
<Provider app={{...}}>
  <MuiThemeProvider theme={{...}}>
    <WithStyles(WithTheme(inject-ExpandableSection)) title="Title">
      <WithTheme(inject-ExpandableSection) title="Title" classes={{...}}>
        <inject-ExpandableSection theme={{...}} title="Title" classes={{...}}>
          <ExpandableSection theme={{...}} title="Title" classes={{...}} amp={false}>
            <WithStyles(ExpansionPanel) classes={{...}} expanded={[undefined]} onChange={[Function]}>
              <ExpansionPanel expanded={[undefined]} onChange={[Function]} classes={{...}} defaultExpanded={false} disabled={false}>
                <WithStyles(Paper) className="MuiExpansionPanel-root-10 RSFExpandableSection-root-1" elevation={1} square={true}>
                  <Paper className="MuiExpansionPanel-root-10 RSFExpandableSection-root-1" elevation={1} square={true} classes={{...}} component="div">
                    <div className="MuiPaper-root-13 MuiPaper-elevation1-16 MuiExpansionPanel-root-10 RSFExpandableSection-root-1">
                      <WithStyles(ExpansionPanelSummary) expandIcon={{...}} classes={{...}} disabled={false} expanded={false} onChange={[Function]}>
                        <ExpansionPanelSummary expandIcon={{...}} disabled={false} expanded={false} onChange={[Function]} classes={{...}}>
                          <WithStyles(ButtonBase) focusRipple={false} disableRipple={true} disabled={false} component="div" aria-expanded={false} className="MuiExpansionPanelSummary-root-40" onFocusVisible={[Function]} onBlur={[Function]} onClick={[Function]}>
                            <ButtonBase focusRipple={false} disableRipple={true} disabled={false} component="div" aria-expanded={false} className="MuiExpansionPanelSummary-root-40" onFocusVisible={[Function]} onBlur={[Function]} onClick={[Function]} classes={{...}} centerRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                              <div className="MuiButtonBase-root-46 MuiExpansionPanelSummary-root-40" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" role="button" aria-expanded={false} onClick={[Function]}>
                                <div className="MuiExpansionPanelSummary-content-44 RSFExpandableSection-summary-6">
                                  <WithStyles(Typography) variant="subheading">
                                    <Typography variant="subheading" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                      <h3 className="MuiTypography-root-49 MuiTypography-subheading-56">
                                        Title
                                      </h3>
                                    </Typography>
                                  </WithStyles(Typography)>
                                </div>
                                <WithStyles(IconButton) disabled={false} className="MuiExpansionPanelSummary-expandIcon-45" component="div" tabIndex={-1} aria-hidden="true">
                                  <IconButton disabled={false} className="MuiExpansionPanelSummary-expandIcon-45" component="div" tabIndex={-1} aria-hidden="true" classes={{...}} color="default">
                                    <WithStyles(ButtonBase) className="MuiIconButton-root-84 MuiExpansionPanelSummary-expandIcon-45" centerRipple={true} focusRipple={true} disabled={false} component="div" tabIndex={-1} aria-hidden="true">
                                      <ButtonBase className="MuiIconButton-root-84 MuiExpansionPanelSummary-expandIcon-45" centerRipple={true} focusRipple={true} disabled={false} component="div" tabIndex={-1} aria-hidden="true" classes={{...}} disableRipple={false} disableTouchRipple={false} type="button">
                                        <div className="MuiButtonBase-root-46 MuiIconButton-root-84 MuiExpansionPanelSummary-expandIcon-45" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={-1} role="button" aria-hidden="true">
                                          <span className="MuiIconButton-label-89">
                                            <pure(ExpandMoreIcon) className="RSFExpandableSection-expandIcon-8">
                                              <ExpandMoreIcon className="RSFExpandableSection-expandIcon-8">
                                                <WithStyles(SvgIcon) className="RSFExpandableSection-expandIcon-8">
                                                  <SvgIcon className="RSFExpandableSection-expandIcon-8" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                                    <svg className="MuiSvgIcon-root-90 RSFExpandableSection-expandIcon-8" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                                      <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                                                      <path fill="none" d="M0 0h24v24H0z" />
                                                    </svg>
                                                  </SvgIcon>
                                                </WithStyles(SvgIcon)>
                                              </ExpandMoreIcon>
                                            </pure(ExpandMoreIcon)>
                                          </span>
                                          <NoSsr defer={false} fallback={{...}}>
                                            <WithStyles(TouchRipple) innerRef={[Function]} center={true}>
                                              <TouchRipple center={true} classes={{...}}>
                                                <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-104" childFactory={[Function: childFactory]}>
                                                  <span className="MuiTouchRipple-root-104" />
                                                </TransitionGroup>
                                              </TouchRipple>
                                            </WithStyles(TouchRipple)>
                                          </NoSsr>
                                        </div>
                                      </ButtonBase>
                                    </WithStyles(ButtonBase)>
                                  </IconButton>
                                </WithStyles(IconButton)>
                              </div>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </ExpansionPanelSummary>
                      </WithStyles(ExpansionPanelSummary)>
                      <WithStyles(Collapse) in={false} timeout="auto" aria-hidden="true">
                        <Collapse in={false} timeout="auto" aria-hidden="true" theme={{...}} classes={{...}} collapsedHeight="0px" component="div">
                          <Transition onEnter={[Function]} onEntered={[Function]} onEntering={[Function]} onExit={[Function]} onExiting={[Function]} addEndListener={[Function]} timeout={{...}} in={false} aria-hidden="true" mountOnEnter={false} unmountOnExit={false} appear={false} enter={true} exit={true} onExited={[Function: noop]}>
                            <div className="MuiCollapse-container-99" style={{...}} aria-hidden="true">
                              <div className="MuiCollapse-wrapper-101">
                                <div className="MuiCollapse-wrapperInner-102">
                                  <WithStyles(ExpansionPanelDetails) classes={{...}}>
                                    <ExpansionPanelDetails classes={{...}}>
                                      <div className="MuiExpansionPanelDetails-root-103 RSFExpandableSection-details-5">
                                        Foo
                                      </div>
                                    </ExpansionPanelDetails>
                                  </WithStyles(ExpansionPanelDetails)>
                                </div>
                              </div>
                            </div>
                          </Transition>
                        </Collapse>
                      </WithStyles(Collapse)>
                    </div>
                  </Paper>
                </WithStyles(Paper)>
              </ExpansionPanel>
            </WithStyles(ExpansionPanel)>
          </ExpandableSection>
        </inject-ExpandableSection>
      </WithTheme(inject-ExpandableSection)>
    </WithStyles(WithTheme(inject-ExpandableSection))>
  </MuiThemeProvider>
</Provider>
`;

exports[`ExpandableSection should render AmpExpandableSection when amp == true 1`] = `
<Provider app={{...}}>
  <MuiThemeProvider theme={{...}}>
    <WithStyles(WithTheme(inject-ExpandableSection)) title="Title">
      <WithTheme(inject-ExpandableSection) title="Title" classes={{...}}>
        <inject-ExpandableSection theme={{...}} title="Title" classes={{...}}>
          <ExpandableSection theme={{...}} title="Title" classes={{...}} amp={true}>
            <WithStyles(AmpExpandableSection) ExpandIcon={[Function: ShouldUpdate]} CollapseIcon={[Function: ShouldUpdate]} title="Title">
              <AmpExpandableSection ExpandIcon={[Function: ShouldUpdate]} CollapseIcon={[Function: ShouldUpdate]} title="Title" classes={{...}} expanded={false}>
                <HelmetWrapper defer={true} encodeSpecialCharacters={true}>
                  <SideEffect(NullComponent) defer={true} encodeSpecialCharacters={true} script={{...}}>
                    <NullComponent defer={true} encodeSpecialCharacters={true} script={{...}} />
                  </SideEffect(NullComponent)>
                </HelmetWrapper>
                <amp-accordion disable-session-states={true} class="MoovAmpExpandableSection-accordion-120">
                  <section className="MoovAmpExpandableSection-section-122">
                    <WithStyles(Typography) variant="subheading" component="h3" className="MoovAmpExpandableSection-title-121">
                      <Typography variant="subheading" component="h3" className="MoovAmpExpandableSection-title-121" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                        <h3 className="MuiTypography-root-127 MuiTypography-subheading-134 MoovAmpExpandableSection-title-121">
                          Title
                          <pure(ExpandMoreIcon) className="MoovAmpExpandableSection-toggle-123 MoovAmpExpandableSection-collapse-125">
                            <ExpandMoreIcon className="MoovAmpExpandableSection-toggle-123 MoovAmpExpandableSection-collapse-125">
                              <WithStyles(SvgIcon) className="MoovAmpExpandableSection-toggle-123 MoovAmpExpandableSection-collapse-125">
                                <SvgIcon className="MoovAmpExpandableSection-toggle-123 MoovAmpExpandableSection-collapse-125" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                  <svg className="MuiSvgIcon-root-162 MoovAmpExpandableSection-toggle-123 MoovAmpExpandableSection-collapse-125" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                    <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                                    <path fill="none" d="M0 0h24v24H0z" />
                                  </svg>
                                </SvgIcon>
                              </WithStyles(SvgIcon)>
                            </ExpandMoreIcon>
                          </pure(ExpandMoreIcon)>
                          <pure(ExpandMoreIcon) className="MoovAmpExpandableSection-toggle-123 MoovAmpExpandableSection-expand-124">
                            <ExpandMoreIcon className="MoovAmpExpandableSection-toggle-123 MoovAmpExpandableSection-expand-124">
                              <WithStyles(SvgIcon) className="MoovAmpExpandableSection-toggle-123 MoovAmpExpandableSection-expand-124">
                                <SvgIcon className="MoovAmpExpandableSection-toggle-123 MoovAmpExpandableSection-expand-124" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                  <svg className="MuiSvgIcon-root-162 MoovAmpExpandableSection-toggle-123 MoovAmpExpandableSection-expand-124" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                    <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                                    <path fill="none" d="M0 0h24v24H0z" />
                                  </svg>
                                </SvgIcon>
                              </WithStyles(SvgIcon)>
                            </ExpandMoreIcon>
                          </pure(ExpandMoreIcon)>
                        </h3>
                      </Typography>
                    </WithStyles(Typography)>
                    <div className="MoovAmpExpandableSection-body-126">
                      Foo
                    </div>
                  </section>
                </amp-accordion>
              </AmpExpandableSection>
            </WithStyles(AmpExpandableSection)>
          </ExpandableSection>
        </inject-ExpandableSection>
      </WithTheme(inject-ExpandableSection)>
    </WithStyles(WithTheme(inject-ExpandableSection))>
  </MuiThemeProvider>
</Provider>
`;

exports[`ExpandableSection should render expanded when expanded=true 1`] = `
<Provider app={{...}}>
  <MuiThemeProvider theme={{...}}>
    <WithStyles(WithTheme(inject-ExpandableSection)) title="Title" expanded={true}>
      <WithTheme(inject-ExpandableSection) title="Title" expanded={true} classes={{...}}>
        <inject-ExpandableSection theme={{...}} title="Title" expanded={true} classes={{...}}>
          <ExpandableSection theme={{...}} title="Title" expanded={true} classes={{...}} amp={true}>
            <WithStyles(AmpExpandableSection) ExpandIcon={[Function: ShouldUpdate]} CollapseIcon={[Function: ShouldUpdate]} title="Title">
              <AmpExpandableSection ExpandIcon={[Function: ShouldUpdate]} CollapseIcon={[Function: ShouldUpdate]} title="Title" classes={{...}} expanded={false}>
                <HelmetWrapper defer={true} encodeSpecialCharacters={true}>
                  <SideEffect(NullComponent) defer={true} encodeSpecialCharacters={true} script={{...}}>
                    <NullComponent defer={true} encodeSpecialCharacters={true} script={{...}} />
                  </SideEffect(NullComponent)>
                </HelmetWrapper>
                <amp-accordion disable-session-states={true} class="MoovAmpExpandableSection-accordion-180">
                  <section className="MoovAmpExpandableSection-section-182">
                    <WithStyles(Typography) variant="subheading" component="h3" className="MoovAmpExpandableSection-title-181">
                      <Typography variant="subheading" component="h3" className="MoovAmpExpandableSection-title-181" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                        <h3 className="MuiTypography-root-187 MuiTypography-subheading-194 MoovAmpExpandableSection-title-181">
                          Title
                          <pure(ExpandMoreIcon) className="MoovAmpExpandableSection-toggle-183 MoovAmpExpandableSection-collapse-185">
                            <ExpandMoreIcon className="MoovAmpExpandableSection-toggle-183 MoovAmpExpandableSection-collapse-185">
                              <WithStyles(SvgIcon) className="MoovAmpExpandableSection-toggle-183 MoovAmpExpandableSection-collapse-185">
                                <SvgIcon className="MoovAmpExpandableSection-toggle-183 MoovAmpExpandableSection-collapse-185" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                  <svg className="MuiSvgIcon-root-222 MoovAmpExpandableSection-toggle-183 MoovAmpExpandableSection-collapse-185" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                    <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                                    <path fill="none" d="M0 0h24v24H0z" />
                                  </svg>
                                </SvgIcon>
                              </WithStyles(SvgIcon)>
                            </ExpandMoreIcon>
                          </pure(ExpandMoreIcon)>
                          <pure(ExpandMoreIcon) className="MoovAmpExpandableSection-toggle-183 MoovAmpExpandableSection-expand-184">
                            <ExpandMoreIcon className="MoovAmpExpandableSection-toggle-183 MoovAmpExpandableSection-expand-184">
                              <WithStyles(SvgIcon) className="MoovAmpExpandableSection-toggle-183 MoovAmpExpandableSection-expand-184">
                                <SvgIcon className="MoovAmpExpandableSection-toggle-183 MoovAmpExpandableSection-expand-184" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                  <svg className="MuiSvgIcon-root-222 MoovAmpExpandableSection-toggle-183 MoovAmpExpandableSection-expand-184" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                    <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                                    <path fill="none" d="M0 0h24v24H0z" />
                                  </svg>
                                </SvgIcon>
                              </WithStyles(SvgIcon)>
                            </ExpandMoreIcon>
                          </pure(ExpandMoreIcon)>
                        </h3>
                      </Typography>
                    </WithStyles(Typography)>
                    <div className="MoovAmpExpandableSection-body-186">
                      Foo
                    </div>
                  </section>
                </amp-accordion>
              </AmpExpandableSection>
            </WithStyles(AmpExpandableSection)>
          </ExpandableSection>
        </inject-ExpandableSection>
      </WithTheme(inject-ExpandableSection)>
    </WithStyles(WithTheme(inject-ExpandableSection))>
  </MuiThemeProvider>
</Provider>
`;
